# slatekore

./: .gitignore  LICENSE  README.md  pyproject.toml
reference/: GEMINI.MD
reference/obsidian/: agent-prompt.md  commands.md  workflows.md
reference/obsidian/templates/: daily_template.md  dataset_template.md  moc_template.md  model_template.md  paper_template.md  prd_template.md  project_template.md  repo_template.md  space_template.md  system-design_template.md  video_template.md  website_template.md
src/slatekore/: __init__.py  check.py  cli.py  init.py
